[package]
name = "apca"
version = "0.31.0"
edition = "2021"
rust-version = "1.80"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apca"
repository = "https://github.com/d-e-s-o/apca.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["trading", "finance", "async", "stocks", "crypto"]
description = """
A crate for interacting with the Alpaca API.
"""
include = ["src/**/*", "specs/**/*", "build.rs", "LICENSE", "README.*", "CHANGELOG.*"]

[features]
default = []
vendored-tls = ["tungstenite/native-tls-vendored"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", default-features = false }
num-decimal = { version = "0.2.4", default-features = false, features = ["num-v04", "serde"] }
progenitor-client = "0.13"
regress = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_urlencoded = { version = "0.7", default-features = false }
thiserror = "2.0"
tokio = { version = "1.13", default-features = false, features = ["net"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-futures = { version = "0.2", default-features = false, features = ["std-future"] }
tungstenite = { package = "tokio-tungstenite", version = "0.26", features = ["connect", "native-tls", "url"] }
url = "2.0"
uuid = { version = "1.0", default-features = false, features = ["serde"] }
websocket-util = "0.14"

[dev-dependencies]
serial_test = { version = "3.0.0", default-features = false }
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
tokio = { version = "1.13", default-features = false, features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.0", default-features = false, features = ["v4"] }
websocket-util = { version = "0.14", features = ["test"] }

[build-dependencies]
progenitor = "0.13"
openapiv3 = "2"
serde_json = "1"
prettyplease = "0.2"
syn = "2"
